--- a/ProyectoFinal/ProyectoFinal.csproj
+++ b/ProyectoFinal/ProyectoFinal.csproj
@@ -69,6 +69,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Submenus\Trabajadores\Carrito.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Submenus\Trabajadores\Carrito.Designer.cs">
+      <DependentUpon>Carrito.cs</DependentUpon>
+    </Compile>
     <Compile Include="Submenus\Trabajadores\Clientes.cs">
       <SubType>Form</SubType>
     </Compile>
