--- a/ProyectoFinal/ProyectoFinal.csproj
+++ b/ProyectoFinal/ProyectoFinal.csproj
@@ -68,16 +68,22 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Submenus\Carrito\Menu Agregar producto y cantidad.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Submenus\Carrito\Menu Agregar producto y cantidad.Designer.cs">
+      <DependentUpon>Menu Agregar producto y cantidad.cs</DependentUpon>
+    </Compile>
     <Compile Include="Submenus\Configuracion.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Submenus\Configuracion.Designer.cs">
       <DependentUpon>Configuracion.cs</DependentUpon>
     </Compile>
-    <Compile Include="Submenus\Carrito.cs">
+    <Compile Include="Submenus\Carrito\Carrito.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Submenus\Carrito.Designer.cs">
+    <Compile Include="Submenus\Carrito\Carrito.Designer.cs">
       <DependentUpon>Carrito.cs</DependentUpon>
     </Compile>
     <Compile Include="Submenus\Clientes.cs">
@@ -134,7 +140,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="Submenus\Carrito.resx">
+    <EmbeddedResource Include="Submenus\Carrito\Carrito.resx">
       <DependentUpon>Carrito.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Submenus\Clientes.resx">
